Add skeleton for later work

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -80,6 +80,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import MarkdownHeaderTextSplitter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers_to_split_on = [\n",
+    "    (\"#\", \"Header 1\"),\n",
+    "    (\"##\", \"Header 2\"),\n",
+    "    (\"###\", \"Header 3\"),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markdown_splitter = MarkdownHeaderTextSplitter(\n",
+    "    headers_to_split_on=headers_to_split_on,\n",
+    "    strip_headers=False  # Set to True if you want to remove headers from the content\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/markdown/people_nick-kadochnikov.md\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    markdown_content = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = markdown_splitter.split_text(markdown_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "title: Nick Kadochnikov – DSI\n",
+      "original_url: https://datascience.uchicago.edu/people/nick-kadochnikov\n",
+      "category: people\n",
+      "date: 2025-05-04\n",
+      "---  \n",
+      "<!-- Table-like structure detected -->  \n",
+      "!\n",
+      "{}\n",
+      "## Share  \n",
+      "* Email page on Facebook (opens new window)\n",
+      "* Share page on X (opens new window)\n",
+      "* Email Page (opens new window)  \n",
+      "<!-- Table-like structure detected -->  \n",
+      "People / MS Instructors\n",
+      "{'Header 2': 'Share'}\n",
+      "# Nick Kadochnikov  \n",
+      "Associate Clinical Professor  \n",
+      "Nick Kadochnikov is an Associate Clinical Professor at University of Chicago Data Science Institute as well as head of Artificial Intelligence and Advanced Technology group at Harbor Global, where he is at the forefront of creating cutting-edge Generative AI tools and advanced tech solutions. These innovative capabilities assist law firms and corporate legal teams in enhancing their service quality, making legal processes more streamlined, accessible, and requiring less manual effort.  \n",
+      "Before joining Harbor, Nick served as a Director of AI at William Blair, where he oversaw the development of advanced AI/ML capabilities and intelligent workflows to transform Investment Banking processes. Prior to that, Nick dedicated 20 years at IBM, successfully crafting AI solutions for a wide range of enterprise functions such as supply-chain, sales, marketing, finance, procurement, and legal. In his final role at IBM Watson Health Consulting, his main focus was on utilizing AI to address healthcare challenges, enhancing patient outcomes, elevating population health, and optimizing the efficiency of clinical trials.\n",
+      "{'Header 1': 'Nick Kadochnikov'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for doc in documents:\n",
+    "    print(doc.page_content)\n",
+    "    print(doc.metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# Nick Kadochnikov  \\nAssociate Clinical Professor  \\nNick Kadochnikov is an Associate Clinical Professor at University of Chicago Data Science Institute as well as head of Artificial Intelligence and Advanced Technology group at Harbor Global, where he is at the forefront of creating cutting-edge Generative AI tools and advanced tech solutions. These innovative capabilities assist law firms and corporate legal teams in enhancing their service quality, making legal processes more streamlined, accessible, and requiring less manual effort.  \\nBefore joining Harbor, Nick served as a Director of AI at William Blair, where he oversaw the development of advanced AI/ML capabilities and intelligent workflows to transform Investment Banking processes. Prior to that, Nick dedicated 20 years at IBM, successfully crafting AI solutions for a wide range of enterprise functions such as supply-chain, sales, marketing, finance, procurement, and legal. In his final role at IBM Watson Health Consulting, his main focus was on utilizing AI to address healthcare challenges, enhancing patient outcomes, elevating population health, and optimizing the efficiency of clinical trials.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.page_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Header 1': 'Nick Kadochnikov'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recursive_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=500,       # Adjust based on your model's context window\n",
+    "    chunk_overlap=50,     # Overlap to maintain context between chunks\n",
+    "    separators=[\"\\n\\n\", \"\\n\", \" \", \"\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_chunks = []\n",
+    "for doc in documents:\n",
+    "    splits = recursive_splitter.split_text(doc.page_content)\n",
+    "    for split in splits:\n",
+    "        final_chunks.append({\n",
+    "            \"content\": split,\n",
+    "            \"metadata\": doc.metadata\n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'content': '---\\ntitle: Nick Kadochnikov – DSI\\noriginal_url: https://datascience.uchicago.edu/people/nick-kadochnikov\\ncategory: people\\ndate: 2025-05-04\\n---  \\n<!-- Table-like structure detected -->  \\n!',\n",
+       "  'metadata': {}},\n",
+       " {'content': '## Share  \\n* Email page on Facebook (opens new window)\\n* Share page on X (opens new window)\\n* Email Page (opens new window)  \\n<!-- Table-like structure detected -->  \\nPeople / MS Instructors',\n",
+       "  'metadata': {'Header 2': 'Share'}},\n",
+       " {'content': '# Nick Kadochnikov  \\nAssociate Clinical Professor',\n",
+       "  'metadata': {'Header 1': 'Nick Kadochnikov'}},\n",
+       " {'content': 'Nick Kadochnikov is an Associate Clinical Professor at University of Chicago Data Science Institute as well as head of Artificial Intelligence and Advanced Technology group at Harbor Global, where he is at the forefront of creating cutting-edge Generative AI tools and advanced tech solutions. These innovative capabilities assist law firms and corporate legal teams in enhancing their service quality, making legal processes more streamlined, accessible, and requiring less manual effort.',\n",
+       "  'metadata': {'Header 1': 'Nick Kadochnikov'}},\n",
+       " {'content': 'Before joining Harbor, Nick served as a Director of AI at William Blair, where he oversaw the development of advanced AI/ML capabilities and intelligent workflows to transform Investment Banking processes. Prior to that, Nick dedicated 20 years at IBM, successfully crafting AI solutions for a wide range of enterprise functions such as supply-chain, sales, marketing, finance, procurement, and legal. In his final role at IBM Watson Health Consulting, his main focus was on utilizing AI to address',\n",
+       "  'metadata': {'Header 1': 'Nick Kadochnikov'}},\n",
+       " {'content': 'his main focus was on utilizing AI to address healthcare challenges, enhancing patient outcomes, elevating population health, and optimizing the efficiency of clinical trials.',\n",
+       "  'metadata': {'Header 1': 'Nick Kadochnikov'}}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
